discussion/kv_engine/132842/132842_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge branch mad-hatter into master

* commit 'e31f2734':
  MB-40370: Make cb::xattr::get_body_size resilient to compressed payloads

Change-Id: I2beffb98a2ec0cf64fa26f83315ee34465838f5c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2020-07-20 10:34:35.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-07-20 10:48:08.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25256/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:2816:36:
error: no member named "is_initialized" in "std::optional<cb::durability::Requirements>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25256/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3432/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:2816:36: error: no member named "is_initialized" in "std::optional<cb::durability::Requirements>" [clang-diagnostic-error]
    const auto isPrepare = durReqs.is_initialized();
                                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3432/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:2816:36:
error: no member named "is_initialized" in "std::optional<cb::durability::Requirements>" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3432/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29229/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\dcp_stream_test.cc(2816): error C2039: "is_initialized": is not a member of "std::optional<cb::durability::Requirements>" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29229/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12629/ : FAILURE

Compile error at [2020-07-20T10:43:02.618Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:2816:36:
error: ?const class std::optional<cb::durability::Requirements>? has no member named ?is_initialized?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12629/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4918/ : FAILURE

Compile error at [2020-07-20T10:38:01.420Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:2816:36:
error: ?const class std::optional<cb::durability::Requirements>? has no member named ?is_initialized?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4918/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4808/ : FAILURE

Compile error at [2020-07-20T10:36:39.259Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:2816:36:
error: ?const class std::optional<cb::durability::Requirements>? has no member named ?is_initialized?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4808/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3840/ : FAILURE

Compile error at [2020-07-20T10:42:30.584Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:2816:36:
error: no member named "is_initialized" in "std::__1::optional<cb::durability::Requirements>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3840/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4731/ : FAILURE

Compile error at [2020-07-20T10:38:34.395Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:2816:36:
error: ?const class std::optional<cb::durability::Requirements>? has no member named ?is_initialized?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4731/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1939/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
